Upgrade from zoemartin01/Pirates-Bot