@@ -2,50 +2,127 @@ package me.zoemartin.rubie.modules.debug;
 
 import me.zoemartin.rubie.Bot;
 import me.zoemartin.rubie.core.CommandPerm;
-import me.zoemartin.rubie.core.exceptions.CommandArgumentException;
 import me.zoemartin.rubie.core.interfaces.Command;
-import me.zoemartin.rubie.core.util.Check;
 import net.dv8tion.jda.api.entities.*;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.*;
 
 public class Shutdown implements Command {
+    private static final int EXIT_CODE_PROPER_SHUTDOWN = 0;
+    private static final int EXIT_CODE_RESTART = 10;
+    private static final int EXIT_CODE_UPGRADE = 20;
+
     @Override
-    public Set<Command> subCommands() {
-        return Collections.emptySet();
+    public @NotNull Set<Command> subCommands() {
+        return Set.of(new Force(), new Upgrade(), new Restart());
     }
 
     @Override
-    public String name() {
+    public @NotNull String name() {
         return "shutdown";
     }
 
     @Override
     public void run(User user, MessageChannel channel, List<String> args, Message original, String invoked) {
-        Check.check(args.isEmpty() || args.size() == 1 && args.get(0).matches("force|now"),
-            CommandArgumentException::new);
-
-        if (args.isEmpty()) {
-            channel.sendMessageFormat("Shutting down soon! :)").queue();
-            Bot.getJDA().shutdown();
-        } else {
-            channel.sendMessageFormat("Shutting down now!").complete();
-            Bot.getJDA().shutdownNow();
-        }
+        channel.sendMessageFormat("Shutting down soon! :)").complete();
+        Bot.shutdownWithCode(EXIT_CODE_PROPER_SHUTDOWN, false);
     }
 
     @Override
-    public CommandPerm commandPerm() {
+    public @NotNull CommandPerm commandPerm() {
         return CommandPerm.OWNER;
     }
 
     @Override
-    public String usage() {
-        return "shutdown [force|now]";
+    public @NotNull String description() {
+        return "Shuts down the bot after all RestActions have finished";
     }
 
-    @Override
-    public String description() {
-        return "Shuts down the bot";
+    private static class Force implements Command {
+
+        @Override
+        public @NotNull String name() {
+            return "force";
+        }
+
+        @Override
+        public @NotNull String regex() {
+            return "--force|-f|now";
+        }
+
+        @Override
+        public void run(User user, MessageChannel channel, List<String> args, Message original, String invoked) {
+            channel.sendMessageFormat("Shutting down now!").complete();
+            Bot.shutdownWithCode(EXIT_CODE_PROPER_SHUTDOWN, true);
+        }
+
+        @Override
+        public @NotNull CommandPerm commandPerm() {
+            return CommandPerm.OWNER;
+        }
+
+        @Override
+        public @NotNull String description() {
+            return "Forces the bot to shut down and cancels RestActions";
+        }
+    }
+
+    private static class Upgrade implements Command {
+
+        @Override
+        public @NotNull String name() {
+            return "upgrade";
+        }
+
+        @Override
+        public @NotNull String regex() {
+            return "--upgrade|-u";
+        }
+
+        @Override
+        public void run(User user, MessageChannel channel, List<String> args, Message original, String invoked) {
+            channel.sendMessageFormat("Upgrading the bot and rebooting!").complete();
+            Bot.shutdownWithCode(EXIT_CODE_UPGRADE, true);
+        }
+
+        @Override
+        public @NotNull CommandPerm commandPerm() {
+            return CommandPerm.OWNER;
+        }
+
+        @Override
+        public @NotNull String description() {
+            return "Upgrades the bot to the current version and restarts";
+        }
+    }
+
+    private static class Restart implements Command {
+
+        @Override
+        public @NotNull String name() {
+            return "restart";
+        }
+
+        @Override
+        public @NotNull String regex() {
+            return "--restart|-r|--reboot";
+        }
+
+        @Override
+        public void run(User user, MessageChannel channel, List<String> args, Message original, String invoked) {
+            channel.sendMessageFormat("Restarting the bot!").complete();
+            Bot.shutdownWithCode(EXIT_CODE_RESTART, true);
+        }
+
+        @Override
+        public @NotNull CommandPerm commandPerm() {
+            return CommandPerm.OWNER;
+        }
+
+        @Override
+        public @NotNull String description() {
+            return "Upgrades the bot to the current version and restarts";
+        }
     }
 }
